# fabricatio-purepython-template

./: README.md  cookiecutter.json
fabricatio-{{ cookiecutter.project_name }}/: README.md  pyproject.toml
fabricatio-{{ cookiecutter.project_name }}/python/fabricatio_{{ cookiecutter.project_name }}/: __init__.py
fabricatio-{{ cookiecutter.project_name }}/python/fabricatio_{{ cookiecutter.project_name }}/actions/: __init__.py
fabricatio-{{ cookiecutter.project_name }}/python/fabricatio_{{ cookiecutter.project_name }}/capabilities/: __init__.py
fabricatio-{{ cookiecutter.project_name }}/python/fabricatio_{{ cookiecutter.project_name }}/models/: __init__.py
fabricatio-{{ cookiecutter.project_name }}/python/fabricatio_{{ cookiecutter.project_name }}/workflows/: __init__.py
fabricatio-{{ cookiecutter.project_name }}/python/tests/: tests.py
hooks/: post_gen_project.py
{{ cookiecutter.full_name }}/: README.md  pyproject.toml
{{ cookiecutter.full_name }}/python/tests/: test_{{ cookiecutter.project_name }}.py
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/: config.py
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/actions/: __init__.py
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/capabilities/: __init__.py  {{ cookiecutter.project_name }}.py
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/models/: __init__.py  {{ cookiecutter.project_name }}.py
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/workflows/: __init__.py
